# osint

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-staging.yml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
backend/: README.md  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rls_policies.py  003_investigation_permissions.py  004_add_signup_ip_hash.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: gdpr.py
backend/app/api/v1/auth/: __init__.py  routes.py  schemas.py
backend/app/api/v1/investigations/: __init__.py  permissions.py  routes.py  schemas.py
backend/app/api/v1/webhooks/: clerk.py
backend/app/audit/: __init__.py  logger.py
backend/app/core/: config.py  database.py  redis.py
backend/app/core/middleware/: __init__.py  auth.py  rate_limit.py  tenant.py
backend/app/core/security/: __init__.py  clerk.py  rbac.py
backend/app/models/: __init__.py  audit.py  base.py  edge.py  entity.py  hypothesis.py  investigation.py  permission.py  tenant.py  user.py
backend/app/services/: anti_abuse.py  permissions.py
backend/app/tasks/: __init__.py  celery_app.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/integration/: __init__.py  test_anti_abuse.py  test_clerk_webhook.py  test_gdpr.py  test_investigation_permissions.py  test_rate_limiting.py  test_rls_isolation.py
backend/tests/unit/: __init__.py  test_anti_abuse.py  test_audit_model.py  test_base_models.py  test_clerk_jwt.py  test_edge_hypothesis_models.py  test_investigation_entity_models.py  test_permission_model.py  test_permissions_service.py  test_rate_limiting.py  test_rbac.py  test_rbac_dependencies.py  test_rbac_security.py  test_tenant_middleware.py  test_tenant_user_models.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.graph-engine  docker-compose.yml  nginx.conf
frontend/: .eslintrc.cjs  CLAUDE.md  eslint.config.js  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/ui/: button.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/auth/components/: auth-guard.tsx  clerk-provider.tsx  user-button.tsx
frontend/src/features/auth/hooks/: use-auth.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/pages/: dashboard.tsx  index.ts  sign-in.tsx  sign-up.tsx
frontend/src/test/: setup.ts
graph-engine/: Cargo.toml  README.md  pyproject.toml
graph-engine/python/osint_graph_engine/: __init__.py
graph-engine/src/: graph.rs  lib.rs  types.rs
scripts/: build-graph-engine.sh  generate-api-client.sh  setup-dev.sh
