[project]
name = "osint-backend"
version = "0.1.0"
description = "OSINT Platform Backend API"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[all]>=0.135.1",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.2",
    "aiosqlite>=0.22.1",
    "celery[redis]>=5.6.2",
    "pydantic-settings>=2.13.1",
    "langchain>=1.2.10",
    "litellm>=1.82.0",
    "redis>=6.4.0,<7.0.0",
    "httpx>=0.28.1",
    "osint-graph-engine",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "cryptography>=46.0.5",
    "svix>=1.86.0",
    "tldextract>=5.3.1",  # AC24: Root domain extraction using Public Suffix List
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# uv Configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "types-redis>=4.6.0.20241004",
]

# CRITICAL: This allows backend to import graph-engine after `maturin develop`
[tool.uv.sources]
osint-graph-engine = { path = "../graph-engine", editable = true }

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
